ui/rawui.nim


proc tabAppend*(t: ptr Tab; name: cstring; c: ptr Control) {.cdecl,
    importc: "uiTabAppend", mylib.}
proc tabInsertAt*(t: ptr Tab; name: cstring; before: cint; c: ptr Control) {.cdecl,
    importc: "uiTabInsertAt", mylib.}
proc tabDelete*(t: ptr Tab; index: cint) {.cdecl, importc: "uiTabDelete", mylib.}
proc tabNumPages*(t: ptr Tab): cint {.cdecl, importc: "uiTabNumPages", mylib.}
proc tabMargined*(t: ptr Tab; page: cint): cint {.cdecl, importc: "uiTabMargined",
    mylib.}
proc tabSetMargined*(t: ptr Tab; page: cint; margined: cint) {.cdecl,
    importc: "uiTabSetMargined", mylib.}
proc newTab*(): ptr Tab {.cdecl, importc: "uiNewTab", mylib.}
type
  Group* = object of Control


template toUiGroup*(this: untyped): untyped =
  (cast[ptr Group]((this)))

proc groupTitle*(g: ptr Group): cstring {.cdecl, importc: "uiGroupTitle",
                                     mylib.}
proc groupSetTitle*(g: ptr Group; title: cstring) {.cdecl, importc: "uiGroupSetTitle",
    mylib.}
proc groupSetChild*(g: ptr Group; c: ptr Control) {.cdecl, importc: "uiGroupSetChild",
    mylib.}
proc groupMargined*(g: ptr Group): cint {.cdecl, importc: "uiGroupMargined",
                                     mylib.}
proc groupSetMargined*(g: ptr Group; margined: cint) {.cdecl,
    importc: "uiGroupSetMargined", mylib.}
proc newGroup*(title: cstring): ptr Group {.cdecl, importc: "uiNewGroup",
                                       mylib.}

type
  Spinbox* = object of Control


template toUiSpinbox*(this: untyped): untyped =
  (cast[ptr Spinbox]((this)))

proc spinboxValue*(s: ptr Spinbox): cint {.cdecl, importc: "uiSpinboxValue",
                                      mylib.}
proc spinboxSetValue*(s: ptr Spinbox; value: cint) {.cdecl,
    importc: "uiSpinboxSetValue", mylib.}
proc spinboxOnChanged*(s: ptr Spinbox;
                      f: proc (s: ptr Spinbox; data: pointer) {.cdecl.}; data: pointer) {.
    cdecl, importc: "uiSpinboxOnChanged", mylib.}
proc newSpinbox*(min: cint; max: cint): ptr Spinbox {.cdecl, importc: "uiNewSpinbox",
    mylib.}
type
  Slider* = object of Control


template toUiSlider*(this: untyped): untyped =
  (cast[ptr Slider]((this)))

proc sliderValue*(s: ptr Slider): cint {.cdecl, importc: "uiSliderValue",
                                    mylib.}
proc sliderSetValue*(s: ptr Slider; value: cint) {.cdecl, importc: "uiSliderSetValue",
    mylib.}
proc sliderOnChanged*(s: ptr Slider;
                     f: proc (s: ptr Slider; data: pointer) {.cdecl.}; data: pointer) {.
    cdecl, importc: "uiSliderOnChanged", mylib.}
proc newSlider*(min: cint; max: cint): ptr Slider {.cdecl, importc: "uiNewSlider",
    mylib.}
type
  ProgressBar* = object of Control


template toUiProgressBar*(this: untyped): untyped =
  (cast[ptr ProgressBar]((this)))

proc progressBarValue*(p: ptr ProgressBar): cint {.cdecl,
    importc: "uiProgressBarValue", mylib.}
proc progressBarSetValue*(p: ptr ProgressBar; n: cint) {.cdecl,
    importc: "uiProgressBarSetValue", mylib.}
proc newProgressBar*(): ptr ProgressBar {.cdecl, importc: "uiNewProgressBar",
                                      mylib.}
type
  Separator* = object of Control


template toUiSeparator*(this: untyped): untyped =
  (cast[ptr Separator]((this)))

proc newHorizontalSeparator*(): ptr Separator {.cdecl,
    importc: "uiNewHorizontalSeparator", mylib.}
proc newVerticalSeparator*(): ptr Separator {.cdecl,
    importc: "uiNewVerticalSeparator", mylib.}
type
  Combobox* = object of Control


template toUiCombobox*(this: untyped): untyped =
  (cast[ptr Combobox]((this)))

proc comboboxAppend*(c: ptr Combobox; text: cstring) {.cdecl,
    importc: "uiComboboxAppend", mylib.}
proc comboboxSelected*(c: ptr Combobox): cint {.cdecl, importc: "uiComboboxSelected",
    mylib.}
proc comboboxSetSelected*(c: ptr Combobox; n: cint) {.cdecl,
    importc: "uiComboboxSetSelected", mylib.}
proc comboboxOnSelected*(c: ptr Combobox;
                        f: proc (c: ptr Combobox; data: pointer) {.cdecl.};
                        data: pointer) {.cdecl, importc: "uiComboboxOnSelected",
                                       mylib.}
proc newCombobox*(): ptr Combobox {.cdecl, importc: "uiNewCombobox", mylib.}
type
  EditableCombobox* = object of Control


template toUiEditableCombobox*(this: untyped): untyped =
  (cast[ptr EditableCombobox]((this)))

proc editableComboboxAppend*(c: ptr EditableCombobox; text: cstring) {.cdecl,
    importc: "uiEditableComboboxAppend", mylib.}
proc editableComboboxText*(c: ptr EditableCombobox): cstring {.cdecl,
    importc: "uiEditableComboboxText", mylib.}
proc editableComboboxSetText*(c: ptr EditableCombobox; text: cstring) {.cdecl,
    importc: "uiEditableComboboxSetText", mylib.}

proc editableComboboxOnChanged*(c: ptr EditableCombobox; f: proc (
    c: ptr EditableCombobox; data: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiEditableComboboxOnChanged", mylib.}
proc newEditableCombobox*(): ptr EditableCombobox {.cdecl,
    importc: "uiNewEditableCombobox", mylib.}
type
  RadioButtons* = object of Control


template toUiRadioButtons*(this: untyped): untyped =
  (cast[ptr RadioButtons]((this)))

proc radioButtonsAppend*(r: ptr RadioButtons; text: cstring) {.cdecl,
    importc: "uiRadioButtonsAppend", mylib.}
proc radioButtonsSelected*(r: ptr RadioButtons): cint {.cdecl,
    importc: "uiRadioButtonsSelected", mylib.}
proc radioButtonsSetSelected*(r: ptr RadioButtons; n: cint) {.cdecl,
    importc: "uiRadioButtonsSetSelected", mylib.}
proc radioButtonsOnSelected*(r: ptr RadioButtons; f: proc (a2: ptr RadioButtons;
    a3: pointer) {.cdecl.}; data: pointer) {.cdecl,
                                        importc: "uiRadioButtonsOnSelected",
                                        mylib.}
proc newRadioButtons*(): ptr RadioButtons {.cdecl, importc: "uiNewRadioButtons",
                                        mylib.}
type
  StructTm* = object
  DateTimePicker* = object of Control


template toUiDateTimePicker*(this: untyped): untyped =
  (cast[ptr DateTimePicker]((this)))

proc dateTimePickerTime*(d: ptr DateTimePicker,
                        time: ptr StructTm){.cdecl, importc: "uiDateTimePickerTime",
                        mylib.}
proc dateTimePickerSetTime*(d: ptr DateTimePicker,
                        time: ptr StructTm){.cdecl, importc: "uiDateTimePickerSetTime",
                        mylib.}
proc dateTimePickerOnChanged*(d: ptr DateTimePicker,
                        f: proc (a1: ptr DateTimePicker; a2: pointer),
                        data: pointer){.cdecl, importc: "uiDateTimePickerOnChanged",
                        mylib.}
proc newDateTimePicker*(): ptr DateTimePicker {.cdecl,
    importc: "uiNewDateTimePicker", mylib.}
proc newDatePicker*(): ptr DateTimePicker {.cdecl, importc: "uiNewDatePicker",
                                        mylib.}
proc newTimePicker*(): ptr DateTimePicker {.cdecl, importc: "uiNewTimePicker",
                                        mylib.}

type
  MultilineEntry* = object of Control


template toUiMultilineEntry*(this: untyped): untyped =
  (cast[ptr MultilineEntry]((this)))

proc multilineEntryText*(e: ptr MultilineEntry): cstring {.cdecl,
    importc: "uiMultilineEntryText", mylib.}
proc multilineEntrySetText*(e: ptr MultilineEntry; text: cstring) {.cdecl,
    importc: "uiMultilineEntrySetText", mylib.}
proc multilineEntryAppend*(e: ptr MultilineEntry; text: cstring) {.cdecl,
    importc: "uiMultilineEntryAppend", mylib.}
proc multilineEntryOnChanged*(e: ptr MultilineEntry; f: proc (e: ptr MultilineEntry;
    data: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiMultilineEntryOnChanged", mylib.}
proc multilineEntryReadOnly*(e: ptr MultilineEntry): cint {.cdecl,
    importc: "uiMultilineEntryReadOnly", mylib.}
proc multilineEntrySetReadOnly*(e: ptr MultilineEntry; readonly: cint) {.cdecl,
    importc: "uiMultilineEntrySetReadOnly", mylib.}
proc newMultilineEntry*(): ptr MultilineEntry {.cdecl,
    importc: "uiNewMultilineEntry", mylib.}
proc newNonWrappingMultilineEntry*(): ptr MultilineEntry {.cdecl,
    importc: "uiNewNonWrappingMultilineEntry", mylib.}
type
  MenuItem* = object of Control


template toUiMenuItem*(this: untyped): untyped =
  (cast[ptr MenuItem]((this)))

proc menuItemEnable*(m: ptr MenuItem) {.cdecl, importc: "uiMenuItemEnable",
                                    mylib.}
proc menuItemDisable*(m: ptr MenuItem) {.cdecl, importc: "uiMenuItemDisable",
                                     mylib.}
proc menuItemOnClicked*(m: ptr MenuItem; f: proc (sender: ptr MenuItem;
    window: ptr Window; data: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiMenuItemOnClicked", mylib.}
proc menuItemChecked*(m: ptr MenuItem): cint {.cdecl, importc: "uiMenuItemChecked",
    mylib.}
proc menuItemSetChecked*(m: ptr MenuItem; checked: cint) {.cdecl,
    importc: "uiMenuItemSetChecked", mylib.}
type
  Menu* = object of Control


template toUiMenu*(this: untyped): untyped =
  (cast[ptr Menu]((this)))

proc menuAppendItem*(m: ptr Menu; name: cstring): ptr MenuItem {.cdecl,
    importc: "uiMenuAppendItem", mylib.}
proc menuAppendCheckItem*(m: ptr Menu; name: cstring): ptr MenuItem {.cdecl,
    importc: "uiMenuAppendCheckItem", mylib.}
proc menuAppendQuitItem*(m: ptr Menu): ptr MenuItem {.cdecl,
    importc: "uiMenuAppendQuitItem", mylib.}
proc menuAppendPreferencesItem*(m: ptr Menu): ptr MenuItem {.cdecl,
    importc: "uiMenuAppendPreferencesItem", mylib.}
proc menuAppendAboutItem*(m: ptr Menu): ptr MenuItem {.cdecl,
    importc: "uiMenuAppendAboutItem", mylib.}
proc menuAppendSeparator*(m: ptr Menu) {.cdecl, importc: "uiMenuAppendSeparator",
                                     mylib.}
proc newMenu*(name: cstring): ptr Menu {.cdecl, importc: "uiNewMenu", mylib.}
proc openFile*(parent: ptr Window): cstring {.cdecl, importc: "uiOpenFile",
    mylib.}
proc saveFile*(parent: ptr Window): cstring {.cdecl, importc: "uiSaveFile",
    mylib.}
proc msgBox*(parent: ptr Window; title: cstring; description: cstring) {.cdecl,
    importc: "uiMsgBox", mylib.}
proc msgBoxError*(parent: ptr Window; title: cstring; description: cstring) {.cdecl,
    importc: "uiMsgBoxError", mylib.}
type
  Area* = object of Control

  Modifiers* {.size: sizeof(cint).} = enum
    ModifierCtrl = 1 shl 0, ModifierAlt = 1 shl 1, ModifierShift = 1 shl 2,
    ModifierSuper = 1 shl 3



type
  AreaMouseEvent* = object
    x*: cdouble
    y*: cdouble
    areaWidth*: cdouble
    areaHeight*: cdouble
    down*: cint
    up*: cint
    count*: cint
    modifiers*: Modifiers
    held1To64*: uint64

  ExtKey* {.size: sizeof(cint).} = enum
    ExtKeyEscape = 1, ExtKeyInsert, ExtKeyDelete, ExtKeyHome, ExtKeyEnd, ExtKeyPageUp,
    ExtKeyPageDown, ExtKeyUp, ExtKeyDown, ExtKeyLeft, ExtKeyRight, ExtKeyF1, ExtKeyF2,
    ExtKeyF3, ExtKeyF4, ExtKeyF5, ExtKeyF6, ExtKeyF7, ExtKeyF8, ExtKeyF9, ExtKeyF10,
    ExtKeyF11, ExtKeyF12, ExtKeyN0, ExtKeyN1, ExtKeyN2, ExtKeyN3, ExtKeyN4, ExtKeyN5,
    ExtKeyN6, ExtKeyN7, ExtKeyN8, ExtKeyN9, ExtKeyNDot, ExtKeyNEnter, ExtKeyNAdd,
    ExtKeyNSubtract, ExtKeyNMultiply, ExtKeyNDivide


type
  AreaKeyEvent* = object
    key*: char
    extKey*: ExtKey
    modifier*: Modifiers
    modifiers*: Modifiers
    up*: cint

  DrawContext* = object

  AreaDrawParams* = object
    context*: ptr DrawContext
    areaWidth*: cdouble
    areaHeight*: cdouble
    clipX*: cdouble
    clipY*: cdouble
    clipWidth*: cdouble
    clipHeight*: cdouble

  AreaHandler* = object
    draw*: proc (a2: ptr AreaHandler; a3: ptr Area; a4: ptr AreaDrawParams) {.cdecl.}
    mouseEvent*: proc (a2: ptr AreaHandler; a3: ptr Area; a4: ptr AreaMouseEvent) {.cdecl.}
    mouseCrossed*: proc (a2: ptr AreaHandler; a3: ptr Area; left: cint) {.cdecl.}
    dragBroken*: proc (a2: ptr AreaHandler; a3: ptr Area) {.cdecl.}
    keyEvent*: proc (a2: ptr AreaHandler; a3: ptr Area; a4: ptr AreaKeyEvent): cint {.cdecl.}


template toUiArea*(this: untyped): untyped =
  (cast[ptr Area]((this)))

